# job_bot

./: app.py  pyproject.toml
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js  settings.css  settings.html  settings.js
job_bot/: __init__.py  cli.py  context.py  pipeline.py  skill.py
job_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
job_bot/skills/: __init__.py  answer_writer.py  auto_filler.py  company_researcher.py  human_review.py  platform_adapter.py  profile_loader.py  question_classifier.py  submitter.py
pipelines/: default.yaml  quick.yaml
profiles/: example.yaml
