[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-bot"
version = "0.1.0"
description = "Modular job application pipeline — skills you can freely compose"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "click>=8.1",
    "streamlit>=1.35.0",
]

[project.scripts]
job-bot = "job_bot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["job_bot*"]
